# pdfprism

./: .gitignore  .pre-commit-config.yaml  NOTICE.txt  README.md  pr_body.md  pyproject.toml
.github/workflows/: ci.yml
docs/: ARCHITECTURE.md
scripts/: generate_sample_pdf.py
src/pdfprism/: __init__.py  app.py  config.py  logging_config.py
src/pdfprism/core/: __init__.py  document.py  exceptions.py  types.py
src/pdfprism/core/adapters/: __init__.py  pymupdf_adapter.py
src/pdfprism/services/: __init__.py  combine.py  compression.py  diff.py  extract.py  pages.py  properties.py  redaction.py  search.py  security.py
src/pdfprism/ui/: __init__.py  main_window.py  page_cache.py  theme.py
src/pdfprism/ui/dialogs/: __init__.py  about.py  combine.py  compare.py  compression.py  crop.py  crypt.py  edit_group.py  extract.py  extract_pages.py  goto_page.py  insert_pages.py  manage_marks.py  merge.py  password.py  properties.py  redaction_options.py  search_redact.py  split.py
src/pdfprism/ui/widgets/: __init__.py  diff_pane.py  diff_view.py  document_view.py  organize_panel.py  outline_panel.py  page_view.py  search_bar.py  search_results_panel.py  thumbnail_panel.py
tests/: __init__.py  conftest.py
tests/core/: test_pymupdf_adapter.py
tests/services/: test_combine.py  test_compression.py  test_diff.py  test_extract.py  test_pages.py  test_pages_crossdoc.py  test_properties.py  test_redaction.py  test_search.py  test_security.py
tests/ui/: __init__.py  conftest.py  test_about_dialog.py  test_combine_dialog.py  test_compare_dialog.py  test_compression_dialog.py  test_crop_dialog.py  test_crypt_dialog.py  test_diff_widgets.py  test_document_view.py  test_edit_group_dialog.py  test_extract_dialog.py  test_extract_pages_dialog.py  test_insert_pages_dialog.py  test_main_window.py  test_manage_marks_dialog.py  test_merge_dialog.py  test_organize_panel.py  test_outline_panel.py  test_page_cache.py  test_page_view.py  test_password_dialog.py  test_properties_dialog.py  test_redaction_options_dialog.py  test_search_bar.py  test_search_redact_dialog.py  test_search_results_panel.py  test_split_dialog.py  test_thumbnail_panel.py
