[project]
name = "pdfprism"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Des", email = "deswhk@gmail.com" }
]
requires-python = ">=3.13"
dependencies = []

[project.scripts]
pdfprism = "pdfprism:main"

[build-system]
requires = ["uv_build>=0.11.19,<0.12.0"]
build-backend = "uv_build"
