[build-system]
requires = ["uv_build>=0.11.19,<0.12.0"]
build-backend = "uv_build"

[project]
name = "pdfprism"
version = "0.1.0"
description = "A PDF reader and editor built on PyMuPDF and PySide6"
readme = "README.md"
requires-python = ">=3.13"
license = "AGPL-3.0-or-later"
license-files = ["LICENSE"]
authors = [
    { name = "Des" },
]
keywords = ["pdf", "reader", "editor", "viewer", "pymupdf", "pyside6", "ocr"]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: End Users/Desktop",
    "Topic :: Office/Business",
    "Topic :: Multimedia :: Graphics :: Viewers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.13",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX :: Linux",
    "Operating System :: MacOS",
]
dependencies = [
    "pymupdf>=1.24",
    "pyside6>=6.7",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-qt>=4.4",
    "pytest-cov>=5.0",
    "ruff>=0.6.9",
    "mypy>=1.11",
    "pre-commit>=3.8",
]

[project.scripts]
pdfprism = "pdfprism.app:main"

[project.urls]
Homepage = "https://github.com/deswhk/pdfprism"
Repository = "https://github.com/deswhk/pdfprism.git"
Issues = "https://github.com/deswhk/pdfprism/issues"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes (unused imports, undefined names)
    "I",   # isort (import ordering)
    "B",   # flake8-bugbear (common bugs)
    "UP",  # pyupgrade (modernize syntax)
]
ignore = []

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.mypy]
python_version = "3.13"
warn_return_any = true
warn_unused_ignores = true
warn_redundant_casts = true
warn_unused_configs = true
disallow_untyped_defs = false
ignore_missing_imports = true
files = ["src/pdfprism"]
